Create happy path to create company.